--- a/index.html
+++ b/index.html
@@ -9,17 +9,22 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 <!-- Icons -->
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
-<!-- Boostrap -->
+
+	<link rel="shortcut icon" href="media/favicon.png" type="image/x-icon">
+	<link rel="icon" href="media/favicon.png" type="image/x-icon">
+
+
+
+	<!-- Boostrap -->
 	<link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
 <!-- Estilos -->
 	<link rel="stylesheet" href="css/estilos.css">
-	<!--OPEN GRAPH-->
+<!--OPEN GRAPH-->
     <meta property="og:tittle" content="Aceites Medicinales Royal CBD - Revendedores oficiales">
     <meta property="og:image" content="https://i.ibb.co/sCqzcqC/logo-aceites.png">
     <meta property="og:image:height" content="200px">
     <meta property="og:image:widht" content="200px">
     <meta property="og:description" content="Aceites Royal CBD - Revendedores oficiales en Capital Federal">
-
     <title>Aceites CBD</title>
 </head>
 <body>
@@ -45,17 +50,40 @@
 <!-- SECTION -->
 	<section class="container p-1">
 
-<!-- Exibidor de Productos -->
-		<div class="containerPromos mb-5 text-center">
-			<div id="exibidorProductos" class="row  justify-content-around mb-3"></div>
-			<div class="w-100 col-12 d-flex justify-content-center">
-				<button class="btn border border-dark miBoton" type="submit" data-toggle="modal" data-target="#exampleModal">VER LISTA DE PRECIOS
-					<a href="https://docs.google.com/document/d/1wbkMm2IE92D5BCwvFhGNzsxhf6XtSofC8OpyTogJLT0/edit?usp=sharing"></a>
-				</button>
+<!-- cARROUSELL -->
+		<div id="carousel1" class="carousel slide Bg-ColorBgGreen color-black" data-ride="carousel">
+			<div class="carousel-inner">
+				<div class="carousel-item active">
+					<img class="img-inicio" src="./media/fotos-carousel/aceite-etnegra.jpg">
+				</div>
+				<div class="carousel-item">
+					<img class="img-inicio" src="./media/fotos-carousel/unguento.jpg">
+				</div>
+				<div class="carousel-item">
+					<img class="img-inicio" src="./media/fotos-carousel/gummies.jpg">
+				</div>
+				<div class="carousel-item">
+					<img class="img-inicio" src="./media/fotos-carousel/aceites.jpg">
+				</div>
+			</div>
+			<a class="carousel-control-prev" href="#carousel1" role="button" data-slide="prev">
+				<i class="fas fa-chevron-left type-md color-black"></i>
+				<span class="sr-only">Previous</span>
+			</a>
+			<a class="carousel-control-next" href="#carousel1" role="button" data-slide="next">
+				<i class="fas fa-chevron-right type-md color-black"></i>
+				<span class="sr-only">Next</span>
+			</a>
+		</div>
+
+<!-- BOTON LISTA DE PRECIOS -->
+		<div class="containerPromos  text-center">
+			<div class="w-100 mb-5 col-12 d-flex justify-content-center">
+				<a target="_blank" class="btn border border-dark miBoton" href="https://docs.google.com/document/d/1wbkMm2IE92D5BCwvFhGNzsxhf6XtSofC8OpyTogJLT0/edit?usp=sharing">VER LISTA DE PRECIOS</a>
 			</div>
 		</div>
 
-<!-- INFORMACION MIA-->
+<!-- INFORMACION -->
 		<div class="cbd-container Bg-ColorBgGreen">
 			<div class="m-1 p-1 d-flex flex-wrap Bg-ColorBgGreen">
 				<div class="p-2 col-12 col-md-6">
@@ -70,7 +98,7 @@
 			</div>
 		</div>
 
-<!-- INFORMACION -->
+<!-- DESPLEGABLES -->
 		<div class="w-100 Bg-ColorBgGreen mb-5">
 			<div class="accordion Bg-ColorBgGreen" id="accordionExample">
 
@@ -83,7 +111,7 @@
 						</button>
 						</h2>
 					</div>
-					<div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
+					<div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
 						<div class="card-body type-md pl-5">
 							<ul>
 								<li>Antidepresivo</li>
@@ -305,6 +333,5 @@
 	<script  src="node_modules/jquery/dist/jquery.js"></script>
 	<script  src="node_modules/popper.js/dist/umd/popper.js"></script>
 	<script  src="node_modules/bootstrap/dist/js/bootstrap.js"></script>  
-	<script src="index.js"> </script>
 </body>
 </html>
